--- a/studienkolleg.html
+++ b/studienkolleg.html
@@ -21,7 +21,14 @@
                             <li><a href="studienkolleg.html">Studienkolleg</a></li>
                         </ul>
                     </li>
-                    <li><a href="requirements-overview.html">Requirements</a></li>
+                    <li class="dropdown-li"> <a href="requirements-overview.html">Requirements <span class="arrow-down">&#9662;</span></a>
+               <ul class="dropdown-menu"> <li><a href="hzb-requirements.html">HZB (Entrance Qualification)</a></li>
+            <li><a href="language-requirements.html">Language Requirements</a></li>
+            <li><a href="financial-proof.html">Financial Proof</a></li>
+            <li><a href="application-documents.html">Application Documents</a></li>
+            <li><a href="visa-requirements.html">Visa Requirements</a></li>
+            </ul>
+            </li>
                     <li><a href="living-in-germany.html">Living in Germany</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
