--- a/index.html
+++ b/index.html
@@ -10,25 +10,27 @@
     <header>
         <nav class="navbar">
             <div class="container">
-                <a href="main.html" class="logo">German Uni Guide</a>
-              <ul class="nav-links">
-    <li class="dropdown-li"> <a href="program-overview.html">Programs
-            <span class="arrow-down">&#9662;</span></a>
+                <a href="index.html" class="logo">German Uni Guide</a> <ul class="nav-links">
+    <li class="dropdown-li">
+        <a href="#">Programs <span class="arrow-down">&#9662;</span></a>
         <ul class="dropdown-menu">
-            <li> <a href="bachelor-program.html">Bachelor</a></li>
-            <li> <a href="masters-program.html">Master's</a></li>
-             <li> <a href="phd-program.html">PhD</a></li>   
+            <li> <a href="#">Bachelor</a></li>
+            <li> <a href="#">Master's</a></li>
+            <li> <a href="#">PhD</a></li>
             <li> <a href="studienkolleg.html">Studienkolleg</a></li> </ul>
     </li>
-    <li class="dropdown-li"> <a href="requirements-overview.html">Requirements <span class="arrow-down">&#9662;</span></a>
-        <ul class="dropdown-menu"> <li><a href="hzb-requirements.html">HZB (Entrance Qualification)</a></li>
-            <li><a href="language-requirements.html">Language Requirements</a></li>
-            <li><a href="financial-proof.html">Financial Proof</a></li>
-            <li><a href="application-documents.html">Application Documents</a></li>
-            <li><a href="visa-requirements.html">Visa Requirements</a></li>
+    <li class="dropdown-li">
+        <a href="#">Requirements <span class="arrow-down">&#9662;</span></a>
+        <ul class="dropdown-menu">
+            <li><a href="#">HZB (Entrance Qualification)</a></li>
+            <li><a href="#">Language Requirements</a></li>
+            <li><a href="#">Financial Proof</a></li>
+            <li><a href="#">Application Documents</a></li>
+            <li><a href="#">Visa Requirements</a></li>
         </ul>
     </li>
-    <li><a href="living-in-germany.html">Living in Germany</a></li> <li><a href="contact.html">Contact</a></li>
+    <li><a href="#">Living in Germany</a></li>
+    <li><a href="#">Contact</a></li>
     <li>
         <button id="search-toggle" aria-label="Open Search">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
@@ -46,18 +48,18 @@
     </header>
 
     <main>
-       <section id="hero" class="hero-section">
-        <div class="container">
-            <h1>Find your path to a German University</h1>
-            <p>Explore programs, understnd requirements and start your application journey with a comprehensive guide.</p>
-        </div>
-       </section>
+        <section id="hero" class="hero-section">
+            <div class="container">
+                <h1>Find your path to a German University</h1>
+                <p>Explore programs, understnd requirements and start your application journey with a comprehensive guide.</p>
+            </div>
+        </section>
 
-       <section id="overview" class="container page-content">
-       <h2>Why Study in Germany?</h2>
+        <section id="overview" class="container page-content">
+            <h2>Why Study in Germany?</h2>
             <p>Germany offers world-class education, innovative research opportunities, and a vibrant international student community...</p>
             <div class="features">
-                 <div class="feature-item">
+                <div class="feature-item">
                     <img src="images/certificate-icon.svg" alt="Certificate Icon">
                     <h3>Certificates & Degrees</h3>
                     <p>Information about recognized qualifications.</p>
@@ -73,12 +75,12 @@
                     <p>Details on online resources and flexible paths.</p>
                 </div>
             </div>
-       </section>
+        </section>
 
-       <section id="programs" class="top-programs">
-        <h2>Top Programs</h2>
-         <div class="program features">
-                 <div class="feature-program">
+        <section id="programs" class="top-programs">
+            <h2>Top Programs</h2>
+            <div class="program features">
+                <div class="feature-program">
                     <img src="images/certificate-icon.svg" alt="Certificate Icon">
                     <h3>Certificates & Degrees</h3>
                     <p>Information about recognized qualifications.</p>
@@ -93,28 +95,25 @@
                     <h3>Flexible Learning Info</h3>
                     <p>Details on online resources and flexible paths.</p>
                 </div>
-                 <div class="feature-program">
+                <div class="feature-program">
                     <img src="images/learn-anywhere-icon.svg" alt="Learn Anywhere Icon">
                     <h3>Flexible Learning Info</h3>
                     <p>Details on online resources and flexible paths.</p>
                 </div>
             </div>
+        </section>
 
-       </section>
-
-       <section id="contact" class="container page-content">
-        <h2>Contact Us</h2>
-        <p>Have questions? Get in touch!</p>
-
-       </section>
+        <section id="contact" class="container page-content">
+            <h2>Contact Us</h2>
+            <p>Have questions? Get in touch!</p>
+        </section>
     </main>
 
-   <footer>
+    <footer>
         <div class="container">
             <p>&copy; <span id="currentYear"></span> German Uni Guide. All rights reserved.</p>
         </div>
     </footer>
     <script src="js/script.js"></script>
-    
 </body>
 </html>
