--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <section id="hero" class="hero-section">
             <div class="container">
                 <h1>Find your path to a German University</h1>
-                <p>Explore programs, understnd requirements and start your application journey with a comprehensive guide.</p>
+                <p>Explore programs, understand requirements and start your application journey with a comprehensive guide.</p>
+               <a href="#overview" class="hero-btn">Explore Programs →</a>
             </div>
         </section>
 
