contact form updates

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </section>
 
         <section id="contact" class="container page-content">
-            <h2>Contact Us</h2>
+            <h3>Contact us</h3>>
             <p>Have questions? Get in touch!</p>
         </section>
     </main>
