--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
     </li>
     <li><a href="#">Living in Germany</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#contact-form-section">Contact</a></li>
     <li>
         <button id="search-toggle" aria-label="Open Search">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
@@ -104,11 +104,10 @@
                 </div>
             </div>
         </section>
-
-        <section id="contact" class="container page-content">
-            <h3>Contact us</h3>>
-            <p>Have questions? Get in touch!</p>
+        <section id="contact-form-section" class="container page-content">
+        <div id="contact-form-root"></div>
         </section>
+
     </main>
 
     <footer>
@@ -117,5 +116,6 @@
         </div>
     </footer>
     <script src="js/script.js"></script>
+    <script type="module" src="./js/contactApp.js"></script>
 </body>
 </html>
